--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,18 @@ html{
     justify-content: center;
     align-items: center;
 }
+::-webkit-scrollbar-track{
+    background-color: white;
+    width: 10px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: black;
+    width: 20px;
+}
+::-webkit-scrollbar{
+
+}
+::-webkit-scrollbar-corner{
+    background: red;
+}
+
