--- a/src/App.css
+++ b/src/App.css
@@ -20,18 +20,23 @@ html{
     justify-content: center;
     align-items: center;
 }
-::-webkit-scrollbar-track{
-    background-color: white;
-    width: 10px;
+::placeholder{
+    color: lightgray;
 }
-::-webkit-scrollbar-thumb{
-    background-color: black;
-    width: 20px;
+*::-webkit-scrollbar,
+*::-webkit-scrollbar-thumb {
+  width: 26px;
+  border-radius: 13px;
+  background-clip: padding-box;
+  border: 10px solid transparent;
 }
-::-webkit-scrollbar{
 
+*::-webkit-scrollbar-thumb {        
+  box-shadow: inset 0 0 0 10px;
 }
-::-webkit-scrollbar-corner{
-    background: red;
+.timeline,
+.chats{
+    overflow: auto;
+    transition: color .3s ease;
 }
 
